--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
   <div class="gameDiv">
-    <div class="buttons-div">
-      <button data-move="rock">Rock</button>
-      <button data-move="paper">Paper</button>
-      <button data-move="scissors">Scissors</button>
+    <h1>Rock Paper Scissors</h1>
+    <div class="emojis-div">
+      <div class="image-container" data-move="rock">
+        <img src="images/rock-emoji.png" class="rps-image" alt="rock-emoji"/>
+      </div>
+      <div class="image-container" data-move="paper">
+        <img  src="images/paper-emoji.png" class="rps-image" alt="paper-emoji"/>
+      </div>
+      <div class="image-container" data-move="scissors">
+        <img  src="images/scissors-emoji.png" class="rps-image" alt="scissors-emoji"/>
+      </div>
     </div>
     <div class="record"></div>
     <button class="reset" onclick>Reset Score</button>
